# ArdClick

./: .gitignore  pyproject.toml  setup.py
ArdClick/: __init__.py  ardclick.py
ArdClick.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ArdClick/: ardclick.py
